[master] Fixed a couple issues - CSS didn't put the keywords on the right z-index - Override wasn't working when we had looked at a target already

--- a/css/filterable.css
+++ b/css/filterable.css
@@ -56,12 +56,12 @@
 
 .filterKeyword {
   padding: 4px;
-  z-index: 1;
+  z-index: 4;
 }
 
 .unfilterKeyword {
     padding: 4px;
-    z-index: 1;
+    z-index: 4;
 }
 
 .filterKeyword::before {
@@ -77,4 +77,3 @@
 .filterKeyword:hover {
   cursor: pointer; cursor: hand
 }
-
